--- a/userChrome.css
+++ b/userChrome.css
@@ -1,5 +1,7 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
+/*vosh userchrome.css*/
+
 /*Scrollbars*/
 
 notificationbox {
