--- a/userChrome.css
+++ b/userChrome.css
@@ -4,9 +4,9 @@
 
 /*Scrollbars*/
 
-notificationbox {
+/*notificationbox {
     overflow-x: hidden;
-}
+}*/
 browser[type="content-primary"], browser[type="content-targetable"] {
     overflow-y: scroll;
     margin-right: -15px;
@@ -35,7 +35,7 @@ browser[type="content-primary"], browser[type="content-targetable"] {
 #bookmarkstoolbar,
 #bookmarkstoolbar-container
 {
-  background:#252627 !important;
+  background:#332d29 !important;
   border-style: none !important;
   max-height:20px!important;
   -moz-appearance: none !important;
@@ -43,7 +43,7 @@ browser[type="content-primary"], browser[type="content-targetable"] {
 
 #main
 {
-background:#252627!important;
+background:#332d29!important;
 -moz-appearance: none !important;
 }
 
@@ -63,20 +63,20 @@ background:#252627!important;
 #back-button .toolbarbutton-icon
 {
     -moz-image-region:rect(0, 11px, 11px, 0)!important;
-    background:#252627!important;
+    background:#332d29!important;
     -moz-appearance: none !important;
 }
 #forward-button .toolbarbutton-icon
 {
     -moz-image-region:rect(0, 22px, 11px, 11px)!important;
-    background:#252627!important;
+    background:#332d29!important;
     -moz-appearance: none !important;
 }
 #reload-button .toolbarbutton-icon,
 #urlbar-reload-button .toolbarbutton-icon
 {
     -moz-image-region:rect(0, 33px, 11px, 22px)!important;
-    background:#252627!important;
+    background:#332d29!important;
     -moz-appearance: none !important;
 }
 #stop-button .toolbarbutton-icon,
@@ -84,42 +84,42 @@ background:#252627!important;
 #tabbrowser-tabs tab .tab-close-button .toolbarbutton-icon
 {
     -moz-image-region:rect(0, 44px, 11px, 33px)!important;
-    background:#252627!important;
+    background:#332d29!important;
     -moz-appearance: none !important;
 }
 #new-tab-button .toolbarbutton-icon
 {
     -moz-image-region:rect(0, 55px, 11px, 44px)!important;
-    background:#252627!important;
+    background:#332d29!important;
     -moz-appearance: none !important;
 }
 #appmenu-button .button-icon
 {
     -moz-image-region:rect(0, 66px, 11px, 55px)!important;
-    background:#252627!important;
+    background:#332d29!important;
     -moz-appearance: none !important;
 }
 #main-window[sizemode="normal"] .toolbarbutton-1
 {
     margin-top:0px!important;
-    background:#252627!important;
+    background:#332d29!important;
     -moz-appearance: none !important;
 }
 #main-window *[id*="-button"]
 {
-    background:#252627!important;
+    background:#332d29!important;
     -moz-appearance: none !important;
 }
 #main-window *[id*="-button"]:hover
 {
-    background:#252627!important;
+    background:#332d29!important;
     -moz-appearance: none !important;
 }
 
 /* Bookmarks BAR */
 #bookmarkstoolbar, #bookmarkstoolbar-container
 {
-    background:#252627!important;
+    background:#332d29!important;
     border:0!important;
     color:#ffffff!important;
 -moz-appearance: none !important;
@@ -128,7 +128,7 @@ background:#252627!important;
 /* URL BAR */
 #urlbar
 {
-    background:#252627!important;
+    background:#332d29!important;
     border:0!important;
     border-right:1px solid #85678F!important;
     color:#6D9E3F!important;
@@ -140,7 +140,7 @@ background:#252627!important;
 }
 #urlbar #notification-popup-box
 {
-    background:#252627!important;
+    background:#332d29!important;
     border-right:1px solid #43648E!important;
     max-height:20px!important;
     max-width:16px!important;
@@ -166,7 +166,7 @@ background:#252627!important;
     font-family:"Terminus"!important;
     font-size: 12px!important;
     border:0px solid #59918a!important;
-    background:#252627!important;
+    background:#332d29!important;
     color:#ededf7!important;
     padding-bottom: 5px!important;
     padding-top: 0px!important; 
@@ -190,12 +190,12 @@ background:#252627!important;
 
 #main-window #tabbrowser-tabs tab[selected]
 {
-	background:#618485!important;
-    color:#252627!important;
+	background:#9a7474!important;
+    color:#ededf7!important;
 }
 #main-window #tabbrowser-tabs tab:not[selected]
 {
-	background:#252627!important;
+	background:#332d29!important;
     color:#ededf7!important;
 }
 
@@ -213,7 +213,7 @@ background:#252627!important;
 }
 #main-window #tabbrowser-tabs tab:not([selected]):hover
 {
-	background:#252627!important;
+	background:#332d29!important;
     color:#75314b!important;
 }
 #main-window #tabbrowser-tabs tab[fadein]:not([pinned])
@@ -257,12 +257,12 @@ background:#252627!important;
 }
 #main-window #browser-border-start
 {
-    background:#252627!important;
+    background:#332d29!important;
     border:0!important;
 }
 #main-window #appmenu-button
 {
-    background:#252627!important;
+    background:#332d29!important;
     border:0!important;
     padding:0px 0px!important;
     min-width:16px!important;
@@ -282,6 +282,6 @@ background:#252627!important;
 #appcontent > #content,
 #appcontent > #content > tabbox > tabpanels
 {
-    background:#252627!important;
+    background:#332d29!important;
     -moz-appearance: none !important;
 }
